--- a/lab03-1.dns.md
+++ b/lab03-1.dns.md
@@ -18,7 +18,7 @@ With these assumptions in mind, the examples in this guide will use a naming sch
 |host2|	Generic Host 2|	host2.nyc3.example.com|	10.128.200.102|
 
 ## Step 1 — Installing BIND on DNS Servers
-On both DNS servers, ns1 and ns2, update the apt package cache by typing:
+On both DNS servers, **ns1** and **ns2**, update the `apt` package cache by typing:
 ```
 sudo apt update
 ```
@@ -26,15 +26,15 @@ Then install BIND on each machine:
 ```
 sudo apt install bind9 bind9utils bind9-doc
 ```
-set BIND to IPv4 mode. On both servers, edit the named default settings file using your preferred text editor. The following example uses nano:
+set BIND to IPv4 mode. On both servers, edit the `named` default settings file using your preferred text editor. The following example uses `nano`:
 ```
 sudo nano /etc/default/named
 ```
-Add -4 to the end of the OPTIONS parameter:
+Add `-4` to the end of the `OPTIONS` parameter:
 > . . .
 > OPTIONS="-u bind -4"
 
-Save and close the file when you are finished. If you used nano to edit the file, you can do so by pressing CTRL + X, Y, then ENTER.
+Save and close the file when you are finished. If you used nano to edit the file, you can do so by pressing `CTRL + X, Y`, then `ENTER`.
 
 Restart BIND to implement the changes:
 ```
