--- a/lab03-2.dns.md
+++ b/lab03-2.dns.md
@@ -7,15 +7,15 @@
 
 ## Step 2 — Configuring the Primary DNS Server
 
-BIND’s configuration consists of multiple files that are included from the main configuration file, named.conf. These file names begin with named because that is the name of the process that BIND runs (with named being short for “name daemon”, as in “domain name daemon”). We will start with configuring the named.conf.options file.
+BIND’s configuration consists of multiple files that are included from the main configuration file, `named.conf`. These file names begin with `named` because that is the name of the process that BIND runs (with `named`being short for “name daemon”, as in “domain name daemon”). We will start with configuring the `named.conf.options` file.
 
 **Configuring the Options File**
 
-On **ns1**, open the named.conf.options file for editing:
+On **ns1**, open the `named.conf.options` file for editing:
 ```
 sudo nano /etc/bind/named.conf.options
 ```
-Above the existing options block, create a new ACL (access control list) block called trusted. This is where you will define a list of clients from which you will allow recursive DNS queries (i.e. your servers that are in the same datacenter as ns1). Add the following lines to add ns1, ns2, host1, and host2 to your list of trusted clients, being sure to replace the example private IP addresses with those of your own servers:
+Above the existing `options` block, create a new ACL (access control list) block called `trusted`. This is where you will define a list of clients from which you will allow recursive DNS queries (i.e. your servers that are in the same datacenter as **ns1**). Add the following lines to add **ns1, ns2, host1**, and **host2** to your list of trusted clients, being sure to replace the example private IP addresses with those of your own servers:
 
 >/etc/bind/named.conf.options — 1 of 3
 ```c
@@ -30,7 +30,7 @@ options {
 
         . . .
 ```
-Now that you have your list of trusted DNS clients, you can edit the options block. This is currently the start of the block:
+Now that you have your list of trusted DNS clients, you can edit the `options` block. This is currently the start of the block:
 
 >/etc/bind/named.conf.options — 2 of 3
 ```c
@@ -42,7 +42,7 @@ options {
         . . .
 }
 ```
-Below the directory directive, add the highlighted configuration lines (and substitute in the appropriate ns1 private IP address):
+Below the `directory` directive, add the highlighted configuration lines (and substitute in the appropriate **ns1** private IP address):
 
 >/etc/bind/named.conf.options — 3 of 3
 ```c
@@ -66,11 +66,11 @@ options {
         . . .
 };
 ```
-Notice the forwarders block, which includes two IP addresses: 8.8.8.8 and 8.8.4.4. This block defines forwarders, a special mechanism that BIND uses to reduce traffic over links to external nameservers. BIND can also use forwarders to allow queries by servers that don’t have direct access to the internet. This can help to make the responses to these queries faster by reducing the load on the local network.
+Notice the `forwarders` block, which includes two IP addresses: `8.8.8.8` and `8.8.4.4`. This block defines forwarders, a special mechanism that BIND uses to reduce traffic over links to external nameservers. BIND can also use forwarders to allow queries by servers that don’t have direct access to the internet. This can help to make the responses to these queries faster by reducing the load on the local network.
 
-The two IP addresses in this block represent Google’s public DNS resolvers, but the IP address of any public recursive name server will work here. For example, you could use the IP address of Cloudflare’s DNS server (1.1.1.1) instead.
+The two IP addresses in this block represent Google’s public DNS resolvers, but the IP address of any public recursive name server will work here. For example, you could use the IP address of Cloudflare’s DNS server (`1.1.1.1`) instead.
 
-When you are finished, save and close the `named.conf.options` file. The above configuration specifies that only your own servers (the trusted ones) will be able to query your DNS server for outside domains.
+When you are finished, save and close the `named.conf.options` file. The above configuration specifies that only your own servers (the `trusted` ones) will be able to query your DNS server for outside domains.
 
 Next, you will specify your DNS zones by configuring the `named.conf.local` file.
 
@@ -80,9 +80,9 @@ On **ns1**, open the `named.conf.local` file for editing:
 ```
 sudo nano /etc/bind/named.conf.local
 ```
-Aside from a few comments, the file will be empty. Here, you will specify your forward and reverse zones. DNS zones designate a specific scope for managing and defining DNS records. Since this guide’s example domains will all be within the nyc3.example.com subdomain, we will use that as our forward zone. Because our example servers’ private IP addresses are each in the 10.128.0.0/16 IP space, the following example will set up a reverse zone so that we can define reverse lookups within that range.
+Aside from a few comments, the file will be empty. Here, you will specify your forward and reverse zones. DNS zones designate a specific scope for managing and defining DNS records. Since this guide’s example domains will all be within the `nyc3.example.com` subdomain, we will use that as our forward zone. Because our example servers’ private IP addresses are each in the `10.128.0.0/16` IP space, the following example will set up a reverse zone so that we can define reverse lookups within that range.
 
-Add the forward zone with the following lines, substituting the zone name with your own and the secondary DNS server’s private IP address in the allow-transfer directive:
+Add the forward zone with the following lines, substituting the zone name with your own and the **secondary DNS server’s private IP address** in the `allow-transfer` directive:
 
 >/etc/bind/named.conf.local — 1 of 2
 ```c
@@ -94,7 +94,7 @@ zone "nyc3.example.com" {
     allow-transfer { 10.128.20.12; };           # ns2 private IP address - secondary
 };
 ```
-Assuming that our private subnet is 10.128.0.0/16, add the reverse zone by with the following lines (note that our reverse zone name starts with 128.10 which is the octet reversal of 10.128):
+Assuming that our private subnet is `10.128.0.0/16`, add the reverse zone by with the following lines (**note that our reverse zone name starts with 128.10 which is the octet reversal of 10.128**):
 
 >/etc/bind/named.conf.local — 2 of 2
 ```c
@@ -113,7 +113,7 @@ Now that your zones are specified in BIND, you need to create the corresponding 
 
 **Creating the Forward Zone File**
 
-The forward zone file is where you define DNS records for forward DNS lookups. That is, when the DNS receives a name query, host1.nyc3.example.com for example, it will look in the forward zone file to resolve host1’s corresponding private IP address.
+The forward zone file is where you define DNS records for forward DNS lookups. That is, when the DNS receives a name query, `host1.nyc3.example.com` for example, it will look in the forward zone file to resolve **host1**’s corresponding private IP address.
 
 Create the directory where your zone files will reside. According to the `named.conf.local` configuration, that location should be `/etc/bind/zones`:
 ```
@@ -143,7 +143,7 @@ $TTL    604800
 @       IN      A       127.0.0.1       ; delete this line
 @       IN      AAAA    ::1             ; delete this line
 ```
-First, you will want to edit the SOA record. Replace the first localhost with ns1’s FQDN, then replace root.localhost with admin.nyc3.example.com. Every time you edit a zone file, you need to increment the Serial value before you restart the named process. Here, increment it to 3:
+First, you will want to edit the SOA record. Replace the first `localhost` with **ns1**’s FQDN, then replace `root.localhost` with `admin.nyc3.example.com`. Every time you edit a zone file, you need to increment the `Serial` value before you restart the `named` process. Here, increment it to `3`:
 
 >/etc/bind/zones/db.nyc3.example.com — updated 1 of 3
 ```c
@@ -155,9 +155,9 @@ $TTL    604800
 
                               . . .
 ```
-Next, delete the three records at the end of the file (after the SOA record). If you’re not sure which lines to delete, they are marked with comments reading delete this line in the previous example.
+Next, delete the three records at the end of the file (after the SOA record). If you’re not sure which lines to delete, they are marked with comments reading `delete this line` in the previous example.
 
-At the end of the file, add your name server records with the following lines (replace the names with your own). Note that the second column specifies that these are NS records:
+At the end of the file, add your name server records with the following lines (replace the names with your own). Note that the second column specifies that these are `NS` records:
 
 >/etc/bind/zones/db.nyc3.example.com — updated 2 of 3
 ```c
@@ -167,7 +167,7 @@ At the end of the file, add your name server records with the following lines (r
     IN      NS      ns1.nyc3.example.com.
     IN      NS      ns2.nyc3.example.com.
 ```
-Now, add the A records for your hosts that belong in this zone. This includes any server whose name you want to end with .nyc3.example.com (substitute the names and private IP addresses). Using our example names and private IP addresses, we will add A records for ns1, ns2, host1, and host2 like so:
+Now, add the A records for your hosts that belong in this zone. This includes any server whose name you want to end with `.nyc3.example.com` (substitute the names and private IP addresses). Using our example names and private IP addresses, we will add A records for **ns1, ns2, host1**, and **host2** like so:
 
 >/etc/bind/zones/db.nyc3.example.com — updated 3 of 3
 ```c
@@ -211,13 +211,13 @@ Now let’s move onto the reverse zone file(s).
 
 **Creating the Reverse Zone File(s)**
 
-Reverse zone files are where you define DNS PTR records for reverse DNS lookups. That is, when the DNS receives a query by IP address, 10.128.100.101 for example, it will look in the reverse zone file(s) to resolve the corresponding FQDN, host1.nyc3.example.com in this case.
+Reverse zone files are where you define DNS PTR records for reverse DNS lookups. That is, when the DNS receives a query by IP address, `10.128.100.101` for example, it will look in the reverse zone file(s) to resolve the corresponding FQDN, `host1.nyc3.example.com` in this case.
 
-On **ns1**, for each reverse zone specified in the named.conf.local file, create a reverse zone file. We will base our example reverse zone file(s) on the sample db.127 zone file. BIND uses this file to store information for the local loopback interface; 127 is the first octet of the IP address that represents localhost (127.0.0.1). Copy this file to the proper location with the following commands (substituting the destination filename so it matches your reverse zone definition):
+On **ns1**, for each reverse zone specified in the `named.conf.local` file, create a reverse zone file. We will base our example reverse zone file(s) on the sample `db.127` zone file. BIND uses this file to store information for the local loopback interface; `127` is the first octet of the IP address that represents **localhost** (`127.0.0.1`). Copy this file to the proper location with the following commands (substituting the destination filename so it matches your reverse zone definition):
 ```
 sudo cp /etc/bind/db.127 /etc/bind/zones/db.10.128
 ```
-Edit the reverse zone file that corresponds to the reverse zone(s) defined in named.conf.local:
+Edit the reverse zone file that corresponds to the reverse zone(s) defined in `named.conf.local`:
 ```
 sudo nano /etc/bind/zones/db.10.128
 ```
@@ -236,7 +236,7 @@ $TTL    604800
 @       IN      NS      localhost.      ; delete this line
 1.0.0   IN      PTR     localhost.      ; delete this line
 ```
-In the same manner as the forward zone file, you will want to edit the SOA record and increment the serial value:
+In the same manner as the forward zone file, you will want to edit the SOA record and increment the `serial` value:
 
 >/etc/bind/zones/db.10.128 — updated 1 of 3
 ```c
@@ -245,9 +245,9 @@ In the same manner as the forward zone file, you will want to edit the SOA recor
 
                               . . .
 ```
-Now delete the two records at the end of the file (after the SOA record). If you’re not sure which lines to delete, they are marked with a delete this line comment in the previous example.
+Now delete the two records at the end of the file (after the SOA record). If you’re not sure which lines to delete, they are marked with a `delete this line` comment in the previous example.
 
-At the end of the file, add your name server records with the following lines (replace the names with your own). Note that the second column specifies that these are NS records:
+At the end of the file, add your name server records with the following lines (replace the names with your own). Note that the second column specifies that these are `NS` records:
 
 >/etc/bind/zones/db.10.128 — updated 2 of 3
 ```c
@@ -257,7 +257,7 @@ At the end of the file, add your name server records with the following lines (r
       IN      NS      ns1.nyc3.example.com.
       IN      NS      ns2.nyc3.example.com.
 ```
-Then add PTR records for all of your servers whose IP addresses are on the subnet of the zone file that you are editing. In our example, this includes all of our hosts because they are all on the 10.128.0.0/16 subnet. Note that the first column consists of the last two octets of your servers’ private IP addresses in reversed order. Be sure to substitute names and private IP addresses to match your servers:
+Then add `PTR` records for all of your servers whose IP addresses are on the subnet of the zone file that you are editing. In our example, this includes all of our hosts because they are all on the `10.128.0.0/16` subnet. Note that the first column consists of the last two octets of your servers’ private IP addresses in **reversed order**. Be sure to substitute names and private IP addresses to match your servers:
 
 >/etc/bind/zones/db.10.128 — updated 3 of 3
 ```c
@@ -296,15 +296,15 @@ You’re done editing your files, so next you can check your files for errors.
 
 **Checking the BIND Configuration Syntax**
 
-Run the following command to check the syntax of the named.conf* files:
+Run the following command to check the syntax of the `named.conf*` files:
 ```
 sudo named-checkconf
 ```
-If your named configuration files have no syntax errors, there won’t be any error messages and you will return to your shell prompt. If there are problems with your configuration files, review the error message and the Configure Primary DNS Server section, then try named-checkconf again.
+If your named configuration files have no syntax errors, there won’t be any error messages and you will return to your shell prompt. If there are problems with your configuration files, review the error message and the `Configure Primary DNS Server` section, then try `named-checkconf` again.
 
-The named-checkzone command can be used to check the correctness of your zone files. Its first argument specifies a zone name, and the second argument specifies the corresponding zone file, which are both defined in named.conf.local.
+The `named-checkzone` command can be used to check the correctness of your zone files. Its first argument specifies a zone name, and the second argument specifies the corresponding zone file, which are both defined in `named.conf.local`.
 
-For example, to check the nyc3.example.com forward zone configuration, run the following command (change the names to match your forward zone and file):
+For example, to check the `nyc3.example.com` forward zone configuration, run the following command (change the names to match your forward zone and file):
 ```
 sudo named-checkzone nyc3.example.com /etc/bind/zones/db.nyc3.example.com
 ```
@@ -312,7 +312,7 @@ sudo named-checkzone nyc3.example.com /etc/bind/zones/db.nyc3.example.com
 >zone nyc3.example.com/IN: loaded serial 3
 >OK
 
-And to check the 128.10.in-addr.arpa reverse zone configuration, run the following command (change the numbers to match your reverse zone and file):
+And to check the `128.10.in-addr.arpa` reverse zone configuration, run the following command (change the numbers to match your reverse zone and file):
 ```
 sudo named-checkzone 128.10.in-addr.arpa /etc/bind/zones/db.10.128
 ```
