--- a/lab03-3.dns.md
+++ b/lab03-3.dns.md
@@ -46,7 +46,7 @@ Below the `directory` directive, add the following lines:
 
     . . .
 ```
-Save and close the `named.conf.options` file. This file should be identical to ns1’s `named.conf.options` file except it should be configured to listen on ns2’s private IP address.
+Save *and close the `named.conf.options` file. This file should be identical to **ns1**’s `named.conf.options` file except it should be configured to listen on **ns2**’s private IP address.
 
 Now edit the `named.conf.local` file:
 ```
