--- a/lab03-4.dns.md
+++ b/lab03-4.dns.md
@@ -7,7 +7,7 @@
 
 ## Step 4 — Configuring DNS Clients
 
-Before all of your servers in the trusted ACL can query your DNS servers, you must configure each of them to use ns1 and ns2 as name servers.
+Before all of your servers in the `trusted` ACL can query your DNS servers, you must configure each of them to use **ns1** and **ns2** as name servers.
 
 Assuming your client servers are running Ubuntu, you’ll need to find what device is associated with your private network. You can do this by querying the private subnet with the `ip address` command. Run the following command **on each of your client machines**, replacing the highlighted subnet with your own:
 ```
